Fix CORS to allow Vercel frontend